--- a/public/index.html
+++ b/public/index.html
@@ -2,63 +2,90 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <link rel="apple-touch-icon" sizes="76x76" href="./assets/img/apple-icon.png">
-    <link rel="icon" type="image/png" href="./assets/img/favicon.png">
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
-    <!-- CSS Files -->
-    <link href="./assets/css/material-dashboard.css?v=2.1.0" rel="stylesheet" />
-    <!-- CSS Just for demo purpose, don't include it in your project -->
-    <link href="./assets/demo/demo.css" rel="stylesheet" />
-
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>Material Design Bootstrap</title>
+    <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- Bootstrap core CSS -->
-    <link href="./assets2/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Material Design Bootstrap -->
+
+    <link href="./assets2/css/bootstrap.css" rel="stylesheet">
+  
     <link href="./assets2/css/mdb.min.css" rel="stylesheet">
-    <!-- Your custom styles (optional) -->
+    
     <link href="./assets2/css/style.min.css" rel="stylesheet">
 
+       <link href="./assets/css/material-dashboard.css?v=2.1.0" rel="stylesheet" />
+     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
+     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
+     <!-- <link rel="icon" type="image/png" href="./assets/img/favicon.png"> -->
+     <link rel="apple-touch-icon" sizes="76x76" href="./assets/img/apple-icon.png"> 
+      <link href="./assets/demo/demo.css" rel="stylesheet" />
+
+
+<style type="text/css">
+    html,
+    body,
+    header,
+    .carousel {
+      height: 60vh;
+    }
+
+    @media (max-width: 740px) {
+      html,
+      body,
+      header,
+      .carousel {
+        height: 100vh;
+      }
+    }
+
+    @media (min-width: 800px) and (max-width: 850px) {
+      html,
+      body,
+      header,
+      .carousel {
+        height: 100vh;
+      }
+    }
+  </style>
     <title>vue-sofine</title>
+
   </head>
   <body>
     <noscript>
       <strong>We're sorry but vue-sofine doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
+
 
     <script type="text/javascript" src="./assets2/js/jquery-3.3.1.min.js"></script>
-  <!-- Bootstrap tooltips -->
+  
   <script type="text/javascript" src="./assets2/js/popper.min.js"></script>
-  <!-- Bootstrap core JavaScript -->
+
   <script type="text/javascript" src="./assets2/js/bootstrap.min.js"></script>
-  <!-- MDB core JavaScript -->
+
   <script type="text/javascript" src="./assets2/js/mdb.min.js"></script>
-  <!-- Initializations -->
+
   <script type="text/javascript">
-    // Animations initialization
+   
     new WOW().init();
   </script>
 
-    <script src="./assets/js/core/jquery.min.js" type="text/javascript"></script>
-  <script src="./assets/js/core/popper.min.js" type="text/javascript"></script>
+  <!-- <script src="./assets/js/core/jquery.min.js" type="text/javascript"></script>
+  <script src="./assets/js/core/popper.min.js" type="text/javascript"></script> -->
   <script src="./assets/js/core/bootstrap-material-design.min.js" type="text/javascript"></script>
   <script src="./assets/js/plugins/perfect-scrollbar.jquery.min.js"></script>
-  <!--  Google Maps Plugin    -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
-  <!-- Chartist JS -->
+  
+  <!-- <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
+  
   <script src="./assets/js/plugins/chartist.min.js"></script>
-  <!--  Notifications Plugin    -->
+   -->
   <script src="./assets/js/plugins/bootstrap-notify.js"></script>
-  <!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
-  <script src="./assets/js/material-dashboard.min.js?v=2.1.0" type="text/javascript"></script>
-  <!-- Material Dashboard DEMO methods, don't include it in your project! -->
+  
+  <script src="./assets/js/material-dashboard.min.js" type="text/javascript"></script>
+ 
   <script src="./assets/demo/demo.js"></script>
-  <script>
+  <script> 
     $(document).ready(function() {
       // Javascript method's body can be found in assets/js/demos.js
       md.initDashboardPageCharts();
